added class methods

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>Help improve our database by adding contacts</h1>
-<%= form_tag "/added_contact", method: :post do %>
+<%= form_tag "/contacts", method: :post do %>
   <div>
     <div>First Name:</div>
     <input type="text" name="first_name">
