--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -3,8 +3,8 @@
   <div class = "row">
     <div class = "col-xs-4">
 <p>The list of all contacts is as follows:</p>
-<% @all.each do |person| %>
-  <%= "#{person.first_name} #{person.last_name} : #{person.phone_number} , #{person.email} "%>
+<% @contacts.each do |person| %>
+  <%= "#{person.first_name} #{person.last_name} : #{person.japan_phone} , #{person.email} "%>
   <br>
   <% end %>
     </div>
