--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -9,6 +9,8 @@
     <input type="text" name="phone">
     <div>Email Address:</div>
     <input type="text" name="email">
+    <div>Address:</div>
+    <input type="text" name="address">
   </div>
   <div>
     <input type="submit" value="Submit Message!">
